# yew-project

./: Cargo.toml  Makefile.toml  NOTES.md  PROJECT.html  PROJECT.js  README.md  index.html  main.js  metapixel.js  other.html  other.js  tiles.html  twocolor.js  twopattern.html  twopattern.js
apps/crown/: Cargo.toml
apps/crown/src/: arc.rs  crownapp.rs  lib.rs  point.rs
apps/metapixel/: Cargo.toml
apps/metapixel/src/: lib.rs  metapixel.rs
apps/testapp/: Cargo.toml
apps/testapp/src/: lib.rs  testapp.rs
apps/tiles/: Cargo.toml
apps/tiles/src/: lib.rs  tiles.rs
apps/twocolor/: Cargo.toml
apps/twocolor/src/: lib.rs  twocolor.rs
libs/bootstrap/: Cargo.toml
libs/bootstrap/src/: bootstrap.rs  lib.rs
libs/components/: Cargo.toml
libs/components/src/: compass.rs  inputcomponent.rs  lib.rs
libs/grids/: Cargo.toml
libs/grids/src/: color.rs  gridtrait.rs  hasgridid.rs  impls.rs  lib.rs  simplegrid.rs  tools.rs  traits.rs
libs/grids/src/impls/: biggrid.rs  flipped.rs  inverted.rs  merged.rs  metagrid.rs  simplegrid.rs  transpose.rs
libs/renderer/: Cargo.toml
libs/renderer/src/: decorators.rs  interact.rs  lib.rs  table_renderer.rs
libs/renderer/src/decorators/: cell_size.rs  class_decorator.rs  color_decorator.rs  cssmunger.rs  label_decorator.rs  printable.rs  purl_decorator.rs  style_decorator.rs  traits.rs
libs/renderer/src/decorators/class_decorator/: borderedcell.rs  cell_size.rs  merged_borders.rs  metagrid.rs  printable.rs
libs/renderer/src/decorators/label_decorator/: emptylabels.rs  flatlabels.rs  mergedflatlabels.rs  roundlabels.rs
libs/renderer/src/decorators/style_decorator/: color_decorator.rs
libs/renderer/src/decorators/traits/: class_decorator.rs  style_decorator.rs
libs/renderer/src/interact/: colored.rs  one_color.rs
libs/tools/: Cargo.toml
libs/tools/src/: bootstrap.rs  lib.rs  logic.rs
serving/: Cargo.toml  crownapp.html  crownapp.js  metapixel.html  metapixel.js  testapp.html  testapp.js  tiles.html  tiles.js  twocolor.html  twocolor.js
serving/src/: lib.rs
src/: PROJECT.rs  app.rs  biggrid.rs  bootstrap.rs  download.rs  lib.rs  meta_grid.rs  other.rs  simplegrid.rs  tablerender.rs  tiles.rs  twocolor.rs  vecwrapper.rs
src/apps/: mod.rs  tiles.rs
src/components/: gridcell.rs  gridrow.rs  gridtable.rs  inputcomponent.rs  mod.rs
src/grids/: color.rs  colorgrid.rs  flipped.rs  gridtrait.rs  mod.rs  tiled.rs
src/tablerender/: input.rs  mod.rs  pattern.rs  simple.rs
temp/: metapixel.html  tiles.js
temp/src/: bootstrap.rs
temp/src/apps/: metapixel.rs  twopattern.rs
temp/src/components/: mod.rs
temp/src/grids/: biggrid.rs  colorgrid.rs  mod.rs  tiled.rs
temp/src/tablerender/: input.rs  simple.rs
