[package]
name = "crown"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wasm-bindgen = "0.2"
# web-sys = { version = "0.3", features = [
#   "CssStyleSheet",
#   "Document",
#   "HtmlElement",
#   "StyleSheet",
#   "StyleSheetList",
#   "HtmlHeadElement",
#   "HtmlStyleElement"]}
yew = "0.17"
#
# [dependencies.bootstrap]
# path = "../../libs/bootstrap"
#
# [dependencies.grids]
# path = "../../libs/grids"
#
# [dependencies.renderer]
# path = "../../libs/renderer"
#
# [dependencies.tools]
# path = "../../libs/tools"
