[package]
name = "metapixel"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "CssStyleSheet",
  "Document",
  "HtmlElement",
  "StyleSheet",
  "StyleSheetList",
  "HtmlHeadElement",
  "HtmlStyleElement"]}
yew = "0.17"

[dependencies.bootstrap]
path = "../../libs/bootstrap"

[dependencies.components]
path = "../../libs/components"

[dependencies.grids]
path = "../../libs/grids"

[dependencies.renderer]
path = "../../libs/renderer"

[dependencies.tools]
path = "../../libs/tools"
