[package]
name = "twocolor"
version = "0.6.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
yew = "0.17"

[dependencies.bootstrap]
path = "../../libs/bootstrap"

[dependencies.grids]
path = "../../libs/grids"

[dependencies.renderer]
path = "../../libs/renderer"
