[package]
name = "components"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"

[dependencies.web-sys]
version = "0.3"
# features = ["Document", "HtmlElement"]
