[package]
name = "grids"
description = "A collection of tools for manipulating knitting patterns."
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
